--- a/Front-end-Atividade 13/index.html
+++ b/Front-end-Atividade 13/index.html
@@ -92,7 +92,7 @@
     </main>
     <footer>
         <div><img src="img/git.png" class="imgit" alt="git"></div>
-        <div class="footertext">Todos os direitos reservados a front end 1</div>
+        <div class="footertext"><div class="text">Todos os direitos reservados a front end 1</div></div>
     </footer>
 </body>
 
